# diarlies2

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  pnpm-lock.yaml
.claude/: settings.json
.claude/agents/: code-reviewer.md  task-decomposer.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agent.yml  backend.yml  deploy-terraform.yml  firebase.yml  terraform.yml  web.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  completion_steps.md  project_overview.md  suggested_commands.md
apps/agent/: README.md  main.py  pyproject.toml
apps/agent/agents/: __init__.py
apps/agent/agents/hello/: agent.py
apps/agent/tests/: test_agent.py
apps/backend/: CLAUDE.md  go.mod
apps/firebase/: .firebaserc  firebase.json
apps/terraform/: .terraform.lock.hcl  DEPLOYMENT.md  backend.tf  main.tf  outputs.tf  variables.tf  workload_identity.tf
apps/terraform/bootstrap/: .gitignore  README.md  main.tf  variables.tf
apps/web/: biome.json  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
docs/: ci-cd.md  designdoc.md  designdoc_ai_agent.md  designdoc_architecture.md  designdoc_data.md  designdoc_infra.md  designdoc_uiux.md  prd.md
docs/plans/tasks/: README.md  TASK_SUMMARY.md  _overview-diarlies-mvp.md  diarlies-mvp-phase1-completion.md  diarlies-mvp-task-01.md  diarlies-mvp-task-02.md  diarlies-mvp-task-03.md  diarlies-mvp-task-04.md  diarlies-mvp-task-05.md  (+8 more)
(+1 files in other folders)
